--- a/css/style.css
+++ b/css/style.css
@@ -17,31 +17,31 @@ footer {
 }
 
 .w {
-
+  background-image: url("../images/tom1.png");
 }
 
 .a {
-
+  background-image: url("../images/tom2.png");
 }
 
 .s {
-
+  background-image: url("../images/tom3.png");
 }
 
 .d {
-
+  background-image: url("../images/tom4.png");
 }
 
 .j {
-
+  background-image: url("../images/snare.png");
 }
 
 .k {
-
+  background-image: url("../images/crash.png");
 }
 
 .l {
-
+  background-image: url("../images/kick.png");
 }
 
 .set {
@@ -69,8 +69,10 @@ footer {
   font-family: 'Arvo', cursive;
   line-height: 2;
   font-weight: 900;
-  color: #DA0463;
-  text-shadow: 3px 0 #DBEDF3;
+  /* color: #DA0463; */
+  color: #e1f84c;
+  /* text-shadow: 3px 0 #DBEDF3; */
+  text-shadow: 3px 0 #000826;
   border-radius: 15px;
   display: inline-block;
   width: 150px;
