--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ footer {
 }
 
 .pressed {
-  box-shadow: 0 3px 4px 0 #DBEDF3;
+  box-shadow: 0 3px 4px 0 #404B69;
   opacity: 0.5;
 }
 
@@ -69,9 +69,7 @@ footer {
   font-family: 'Arvo', cursive;
   line-height: 2;
   font-weight: 900;
-  /* color: #DA0463; */
   color: #e1f84c;
-  /* text-shadow: 3px 0 #DBEDF3; */
   text-shadow: 3px 0 #000826;
   border-radius: 15px;
   display: inline-block;
