--- a/css/sassy.css
+++ b/css/sassy.css
@@ -1,19 +1,18 @@
 body {
   text-align: center;
-  background-color: #283149;
+  background-color: #18223d;
 }
 
 h1 {
   font-size: 5rem;
-  color: #DBEDF3;
+  color: #e0e8eb;
   font-family: "Arvo", cursive;
-  text-shadow: 3px 0 #DA0463;
-
+  text-shadow: 3px 0 #18223d;
 }
 
 footer {
-  color: #DBEDF3;
-  font-family: sans-serif;
+  color: #e0e8eb;
+  font-family: "Arvo", cursive;
 }
 
 .w {
@@ -44,38 +43,28 @@ footer {
   background-image: url("../images/kick.png");
 }
 
-.set {
+.drumsetAlign {
   margin: 10% auto;
 }
 
-.game-over {
-  background-color: red;
-  opacity: 0.8;
-}
-
 .pressed {
-  box-shadow: 0 3px 4px 0 #404B69;
   opacity: 0.5;
-}
-
-.red {
-  color: red;
 }
 
 .drum {
   outline: none;
-  border: 10px solid #404B69;
-  font-size: 5rem;
-  font-family: 'Arvo', cursive;
-  line-height: 2;
-  font-weight: 900;
-  color: #e1f84c;
-  text-shadow: 3px 0 #000826;
+  border: 10px solid #4169d8;
   border-radius: 15px;
+  font-size: 5rem;
+  font-family: "Arvo", cursive;
+  font-weight: 900;
+  line-height: 1;
   display: inline-block;
   width: 150px;
   height: 150px;
   text-align: center;
   margin: 10px;
-  background-color: white;
+  background-color: #e0e8eb;
+  color: #e1f84c;
+  text-shadow: 3px 0 #18223d;
 }
