a little more sass

--- a/sass/sassy.scss
+++ b/sass/sassy.scss
@@ -46,7 +46,7 @@ footer {
 }
 .drum {
 	outline: none;
-	border: 10px solid #4169d8;
+	border: 10px solid $color_4;
 	border-radius: 15px;
 	font-size: 5rem;
 	font-family: $font-family_1;
