--- a/css/sassy.css
+++ b/css/sassy.css
@@ -2,16 +2,12 @@ body {
   text-align: center;
   background-color: #18223d;
   font-family: "Arvo", cursive;
+  color: #e0e8eb;
 }
 
 h1 {
-  font-size: 5rem;
-  color: #e0e8eb;
-  text-shadow: 3px 0 #18223d;
-}
-
-footer {
-  color: #e0e8eb;
+  font-size: 1.5rem;
+  text-shadow: 2px 0 #4169d8;
 }
 
 .w {
@@ -42,8 +38,11 @@ footer {
   background-image: url("../images/kick.png");
 }
 
-.drumsetAlign {
-  margin: 10% auto;
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .pressed {
@@ -51,19 +50,35 @@ footer {
 }
 
 .drum {
-  outline: none;
-  border: 10px solid #4169d8;
-  border-radius: 15px;
+  flex: 40%;
+  margin: 10px;
+  border: 7px solid #4169d8;
+  border-radius: 10px;
+  text-align: center;
   font-size: 5rem;
   font-family: "Arvo", cursive;
-  font-weight: 900;
-  line-height: 1;
-  display: inline-block;
-  width: 150px;
-  height: 150px;
-  text-align: center;
-  margin: 10px;
+  font-weight: 300;
+  line-height: 1.25;
   background-color: #e0e8eb;
-  color: #e1f84c;
-  text-shadow: 3px 0 #18223d;
+  color: #4169d8;
+  text-shadow: 5px 0 #18223d;
+}
+
+@media only screen and (min-width: 400px) {
+  h1 {
+    font-size: 2rem;
+  }
+}
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 3rem;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .drum {
+    flex: 30%;
+  }
+  h1 {
+    font-size: 4rem;
+  }
 }
