--- a/sass/sassy.scss
+++ b/sass/sassy.scss
@@ -37,7 +37,7 @@ h1 {
 .flex-container{
 	display: flex;
 	flex-direction: row;
-	flex-wrap: wrap;;
+	flex-wrap: wrap;
 	justify-content: center;
 }
 .pressed {
