--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,9 +13,6 @@ h1 {
 	font-size: 1.5rem;
 	text-shadow: 2px 0 $color_2;
 }
-.w {
-	background-image: url("../images/tom11.png");
-}
 .a {
 	background-image: url("../images/tom22.png");
 }
@@ -24,6 +21,9 @@ h1 {
 }
 .d {
 	background-image: url("../images/tom44.png");
+}
+.f {
+	background-image: url("../images/tom11.png");
 }
 .j {
 	background-image: url("../images/snare22.png");
